appId: com.razeandrise.app
# Assumes user is already signed in
---
- launchApp
- waitForAnimationToEnd
- tapOn: "Settings"
- tapOn: "Sign out"
- tapOn:
    text: "Sign out"
    optional: true
- assertVisible: "Sign In"
