appId: com.razeandrise.app
# Assumes user is already signed in
---
- launchApp
- waitForAnimationToEnd
- tapOn: "Settings"
- tapOn: "Change Password"
- tapOn:
    id: "new-password-input"
    optional: true
- inputText: "newpassword123"
- tapOn:
    id: "confirm-new-password-input"
    optional: true
- inputText: "newpassword123"
- tapOn: "Update password"
- assertVisible: "Password updated."
